# malloc-from-scratch

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/malloc_from_scratch/: memory_allocator.h  memory_internal.h
src/: calloc.cpp  free.cpp  malloc.cpp  memory_internal.cpp  realloc.cpp
tests/: CMakeLists.txt  README.md  test_utils.h
tests/concurrency/: test_concurrent_calloc.cpp  test_interleaved_malloc_free.cpp  test_mixed_function_concurrency.cpp  test_parallel_alloc_free.cpp  test_realloc_concurrent.cpp  test_separate_alloc_free_threads.cpp
tests/correctness/: test_block_coalescing.cpp  test_coalescing.cpp  test_data_integrity.cpp  test_data_integrity_after_multiple_operations.cpp  test_interleaved_allocations_and_frees.cpp  test_memory_reuse_after_free.cpp  test_realloc_operations.cpp  test_realloc_shrink_grow.cpp  test_various_allocation_sizes.cpp
tests/edge_cases/: test_allocation_sizes.cpp  test_calloc_overflow.cpp  test_free_null_pointer.cpp  test_huge_allocation_request.cpp  test_odd_and_boundary_sizes.cpp  test_realloc_edge_cases.cpp  test_realloc_variations.cpp  test_repeated_alloc_free_cycles.cpp  test_zero_size_allocations.cpp
tests/integration/: test_all_operations_combined.cpp  test_alternating_function_calls.cpp  test_calloc_realloc_chain.cpp  test_complete_lifecycle.cpp  test_comprehensive.cpp  test_mixed_allocation_methods.cpp  test_partial_free_and_realloc.cpp  test_random_alloc_free_patterns.cpp  test_realistic_usage_patterns.cpp  test_workload_simulation.cpp
tests/invalid/: test_buffer_overrun_detection.cpp  test_buffer_overruns.cpp  test_double_free_detection.cpp  test_free_interior_pointer.cpp  test_free_invalid_pointer.cpp  test_realloc_corrupted_memory.cpp  test_realloc_invalid_pointer.cpp  test_small_buffer_overrun.cpp
tests/stress/: test_alloc_free_patterns.cpp  test_large_allocations.cpp  test_many_small_allocations.cpp  test_progressive_size_growth.cpp  test_rapid_alloc_free.cpp  test_repeated_alloc_patterns.cpp  test_small_allocs.cpp  test_syscall_overhead.cpp
tests/unit/: test_calloc.cpp  test_free.cpp  test_malloc.cpp  test_realloc.cpp  test_smoke.cpp
tools/: strace_test.sh
